# ArmorIQ-Guardrail-Agent

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: graph.py  main.py  mcp_client.py
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx  providers.tsx
dashboard/lib/: api.ts
mcp_server/: server.py
policy/: engine.py
