[project]
name = "armoriq-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.111.0",
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
    "langchain-anthropic>=1.4.7",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.6",
    "langsmith>=0.9.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]
